<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_main_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_dark"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight=".80"
                    android:background="@android:color/holo_blue_dark"
                    android:gravity="center_vertical"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@android:drawable/ic_menu_manage"
                    android:layout_weight="0.20"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_steps_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >


                <Button
                    android:id="@+id/step1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/step1" />
                <Button
                    android:id="@+id/step2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/step2" />
                <Button
                    android:id="@+id/step3_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/step3" />
                <Button
                    android:id="@+id/step4_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/step4" />
                <Button
                    android:id="@+id/step5_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/step5" />
            </LinearLayout>

            <TextView
                android:id="@+id/main_page_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduction_main_page"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_steps_buttons" />

        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>