<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/constraint_layout_step4"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="appinventor.ai_pawchism.Rubic_Cube.Step4">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/publisherAdView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_main_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_dark"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight=".80"
                    android:background="@android:color/holo_blue_dark"
                    android:gravity="center_vertical"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/step4_settings_imageview"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.20"
                    app:srcCompat="@android:drawable/ic_menu_manage" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_steps_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/step4_to_step1_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#088da5"
                    android:text="@string/step1" />

                <Button
                    android:id="@+id/step4_to_step2_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#088da5"
                    android:text="@string/step2" />

                <Button
                    android:id="@+id/step4_to_step3_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#088da5"
                    android:text="@string/step3" />

                <Button
                    android:id="@+id/step4_to_step4_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#c6e2ff"
                    android:text="@string/step4"
                    android:textColor="#FF021486"/>

                <Button
                    android:id="@+id/step4_to_step5_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#088da5"
                    android:text="@string/step5" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/layout_explanation_moves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/step4_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step4_text1"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <LinearLayout
                    android:id="@+id/layout_exit_effect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/step4_exit_text"
                        android:text="@string/exit_situation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/step4_effect_text"
                        android:text="@string/step4_effect"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginRight="20dp"/>

                </LinearLayout>



                <ImageView
                    android:id="@+id/step4_exit_effect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/step4_exit_effect" />


                <TextView
                    android:id="@+id/step4_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step4_text2"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ImageView
                    android:id="@+id/step4_alg1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/step4_alg1" />

                <ImageView
                    android:id="@+id/step4_moves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/step4_moves"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/step4_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step4_text3"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ImageView
                    android:id="@+id/step4_alg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/step4_alg2" />

                <TextView
                    android:id="@+id/step4_text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step4_text4"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <ImageView
                    android:id="@+id/step4_explanation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/step4_explanation" />

                <TextView
                    android:id="@+id/step4_text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step4_text5"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="100dp"
                    />



            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.doubleclick.PublisherAdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/publisherAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9832953507407797/5858035763"
        ads:layout_constraintBottom_toTopOf="@+id/step4_to_home_button"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent">
    </com.google.android.gms.ads.doubleclick.PublisherAdView>

    <Button
        android:id="@+id/step4_to_home_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#088da5"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>